friend relationship update
